# intro-to-sql

./: .gitignore  Makefile  README.md  download_imdb.py  imdb_cleaner.py  imdb_data.py  justfile  load_imdb.py  name_basics_data.py  pyproject.toml  title_basics_data.py  title_crew_data.py  title_ratings_data.py
.devcontainer/: devcontainer.json  setup.sh
imdb_cleaner/: imdb_cleaner.py
notes/: Part 1 - Introduction.md  Part 2 - Tables, columns, rows & keys.md  Part 2 - Tables, columns, rows, and keys.md  Part 3 - Select, Join, and Union.md  Part 4 - Insert, Update and Delete.md
tests/: max_size.py
