[tool.poetry]
name = "imdb-cleaner"
version = "0.1.0"
description = ""
authors = ["Stiff Neck Jim <22213990+stiffneckjim@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
