[tool.poetry]
name = "intro-to-sql"
version = "0.1.0"
description = ""
authors = ["Stiff Neck Jim <22213990+stiffneckjim@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.5"
pandas = "^2.2.3"
requests = "^2.32.4"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
